--- a/src/components/auth/activation-email-sent/activation-email-sent.module.css
+++ b/src/components/auth/activation-email-sent/activation-email-sent.module.css
@@ -24,6 +24,8 @@
 	font-weight: var(--typography-font-weight-normal);
 	line-height: var(--typography-line-height-relaxed);
 	color: var(--color-semantic-text-primary);
+	text-align: center;
+	margin: 0;
 }
 
 .email {
